src/ui/snapshots/prow__ui__status_bar__tests__snapshot_filter_mode.snap
---
source: src/ui/status_bar.rs
expression: "render_to_string(AppMode::Filter, SortOrder::Newest, true)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓/jk move  Space toggle  ⏎ apply  Esc cancel                                   Loading...       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
