src/ui/snapshots/prow__ui__status_bar__tests__snapshot_list_mode_loading.snap
---
source: src/ui/status_bar.rs
expression: "render_to_string(AppMode::List, SortOrder::Newest, true)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ j/k move  h/l section  g/G top/end  ⏎ open  s sort  f filter  r refresh  q quitSort: newest firs │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
